# measems-doc

./: README.md  pyproject.toml
.github/workflows/: static.yml
docs/: Makefile  conf.py  index.rst
docs/isacuavdataset/: 1-gettingstarted.rst  2-dataformat.rst  3-examples.rst  4-measurement.rst  5-postprocessing.rst  6-references.rst  7-about.rst  index.rst
docs/isacuavdataset/api/: modules.rst  plot_receiver.rst  plot_scenario.rst  torch_dataset.rst  uavdataset.rst
measems/: __init__.py
source/: conf.py  index.rst
